bot deletion
